tooling/nargo_cli/tests/snapshots/execution_success/array_dynamic_main_output/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(mut x: [Field; 10], index: u8) -> pub [Field; 10] {
    x[index] = 0;
    x
}
