tooling/nargo_cli/tests/snapshots/execution_success/array_dynamic_main_output/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [Field; 10], v2: u32):
    v1 = allocate -> &mut [Field; 10]
    store v0 at v1
    (no terminator instruction)
}
[array_dynamic_main_output] Circuit output: [0x00, 0x01, 0x02, 0x03, 0x04, 0x00, 0x06, 0x07, 0x08, 0x09]
